--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 spring.datasource.url= jdbc:mysql://localhost:3306/bookstore?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=spring
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.error.include-message=always
 server.error.include-binding-errors=always
